# Escape-the-algorithm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  eta-accessibility-roadmap.docx  github-ruleset-main.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_platform.md
.github/workflows/: ci.yml  release-binaries.yml
docs/: getting-started.md  reddit.md  spotify.md  tiktok.md  troubleshooting.md  twitter.md  youtube.md
docs/screenshots/: README.md
eta/: __init__.py  cli.py  gui.py
eta/exporters/: opml.py  txt.py
eta/parsers/: __init__.py  detect.py  reddit.py  spotify.py  tiktok.py  twitter.py  youtube.py
eta/resolvers/: podcastindex.py
tests/: test_cli.py  test_detect.py  test_opml.py  test_podcastindex.py  test_reddit.py  test_spotify.py  test_tiktok.py  test_twitter.py  test_youtube.py
tests/fixtures/: following.js  spotify_podcasts.json  subreddits.csv  subreddits.txt  subscriptions.csv  tiktok_following.json
