[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "escape-the-algorithm"
version = "0.2.0"
description = "Escape algorithmic feeds. Convert platform exports to RSS/OPML."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["rss", "opml", "youtube", "reddit", "spotify", "algorithm", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = []

[project.scripts]
eta = "eta.cli:main"

[project.urls]
Homepage = "https://github.com/TheAmericanMaker/Escape-the-algorithm"
Issues = "https://github.com/TheAmericanMaker/Escape-the-algorithm/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
